dynamic_island/src/native_panel_renderer/snapshots/dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanding_25.snap
---
source: extensions/dynamic_island/src/native_panel_renderer/snapshot_tests.rs
assertion_line: 82
expression: snapshot
---
scenario: expanding_25
primitives:
  - type: RoundRect
    frame:
      x: 0
      y: 0
      width: 256
      height: 108
    radius: 20.5
    color: "rgb(18, 18, 22)"
metadata:
  timestamp: 2026-05-30
  display_mode: Expanding
  animation_progress: 0.25
